Added logos, fields and work item post type

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -3,14 +3,29 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
+Global
+--------------------------------------------------------------*/
+
+/* Utility */
+.full-height_desktop {
+	position: relative;
+	height: 100%;
+}
+
+
+/*--------------------------------------------------------------
 Header
 --------------------------------------------------------------*/
+.site-header {
+	padding: 1.25em 0;
+}
 .site-branding,
 .main-navigation {
 	float: left;
 }
 .site-branding {
-	margin: 0 3.75em 0 0;
+	margin-right: 3.75em;
+	margin-bottom: 0;
 }
 
 .main-navigation,
