--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -3,12 +3,22 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
+Global
+--------------------------------------------------------------*/
+
+/* Utility */
+.full-height {
+	position: relative;
+	height: 100%;
+}
+
+/*--------------------------------------------------------------
 Header
 --------------------------------------------------------------*/
 .site-header {
 	text-align: center;
 	background-color: $nav-bg;
-	padding: 1.25em 0;
+	padding: 1.5em 0 1.25em;
 	a {
 		color: white;
 		&:hover,
@@ -23,7 +33,7 @@ Header
 	display: block;
 }
 .site-branding {
-	margin: 0 0 1.0em;
+	margin: 0 0 1.25em;
 }
 
 /* Navigation */
