--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -1,3 +1,30 @@
 /*--------------------------------------------------------------
 >>> _992up.scss
 --------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+Home Page
+--------------------------------------------------------------*/
+.section {
+	padding: 54px 0;
+}
+
+/*------------------------------
+Hero
+------------------------------*/
+.hero-callout {
+	h1 {
+		font-size: 54px;
+		font-size: 5.4rem;
+	}
+	p {
+		font-size: 24px;
+		font-size: 2.4rem;
+	}
+}
+.hero-image {
+	img {
+		max-width: 450px;
+		margin-bottom: -265px;
+	}
+}
