--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -1,3 +1,28 @@
 /*--------------------------------------------------------------
 >>> _1200up.scss
 --------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+Home Page
+--------------------------------------------------------------*/
+.section {
+	padding: 72px 0;
+}
+
+/*------------------------------
+Hero
+------------------------------*/
+.hero-section {
+	min-height: 500px;
+}
+.hero-callout {
+	h1 {
+		margin-top: 0.75em;
+	}
+}
+.hero-image {
+	img {
+		max-width: 500px;
+		margin-bottom: -325px;
+	}
+}
