Added home services section

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -72,6 +72,11 @@ Hero
 .hero-section {
 	text-align: left;
 }
+.hero-callout {
+	.button {
+		margin: 1.0em 0 0.5em;
+	}
+}
 .hero-image {
 	display: block;
 	position: absolute;
