--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@ Imports
 @import "_mixins";
 @import "_fonts";
 @import "_base";
+@import "_plugins";
 
 /*--------------------------------------------------------------
 Media Queries
