Cleaned up sections and added field to enable/disable them

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -65,6 +65,10 @@ Header
 /*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
+.section {
+	padding: 56px 0;
+}
+
 
 /*------------------------------
 Hero
@@ -84,6 +88,6 @@ Hero
 	bottom: 0;
 	img {
 		max-width: 375px;
-		margin-bottom: -200px;
+		margin-bottom: -180px;
 	}
 }
