--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -5,9 +5,6 @@
 /*--------------------------------------------------------------
 Home Page
 --------------------------------------------------------------*/
-.section {
-	padding: 72px 0;
-}
 
 /*------------------------------
 Hero
@@ -23,6 +20,13 @@ Hero
 .hero-image {
 	img {
 		max-width: 500px;
-		margin-bottom: -325px;
+		margin-bottom: -300px;
 	}
+}
+
+/*------------------------------
+Testimonials
+------------------------------*/
+.tst-text {
+	padding: 0 10%;
 }
