Added CTA section and abstracted a few rules

--- a/assets/sass/_1200up.scss
+++ b/assets/sass/_1200up.scss
@@ -6,9 +6,7 @@
 Home Page
 --------------------------------------------------------------*/
 
-/*------------------------------
-Hero
-------------------------------*/
+/* Hero */
 .hero-section {
 	min-height: 500px;
 }
@@ -20,13 +18,11 @@ Hero
 .hero-image {
 	img {
 		max-width: 500px;
-		margin-bottom: -300px;
+		margin-bottom: -330px;
 	}
 }
 
-/*------------------------------
-Testimonials
-------------------------------*/
+/* Testimonials */
 .tst-text {
 	padding: 0 10%;
 }
