--- a/assets/sass/_992up.scss
+++ b/assets/sass/_992up.scss
@@ -9,9 +9,7 @@ Home Page
 	padding: 64px 0;
 }
 
-/*------------------------------
-Hero
-------------------------------*/
+/* Hero */
 .hero-callout {
 	h1 {
 		font-size: 56px;
@@ -25,6 +23,6 @@ Hero
 .hero-image {
 	img {
 		max-width: 450px;
-		margin-bottom: -240px;
+		margin-bottom: -230px;
 	}
 }
