--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -70,9 +70,7 @@ Home Page
 }
 
 
-/*------------------------------
-Hero
-------------------------------*/
+/* Hero */
 .hero-section {
 	text-align: left;
 }
@@ -88,6 +86,6 @@ Hero
 	bottom: 0;
 	img {
 		max-width: 375px;
-		margin-bottom: -180px;
+		margin-bottom: -160px;
 	}
 }
