Disabled unnecessary Bootstrap stuff

--- a/assets/sass/bootstrap/_bootstrap.scss
+++ b/assets/sass/bootstrap/_bootstrap.scss
@@ -16,7 +16,7 @@
 @import "buttons";
 
 // Components
-@import "component-animations";
+/*@import "component-animations";
 @import "glyphicons";
 @import "dropdowns";
 @import "button-groups";
@@ -36,13 +36,13 @@
 @import "list-group";
 @import "panels";
 @import "wells";
-@import "close";
+@import "close";*/
 
 // Components w/ JavaScript
-@import "modals";
+/*@import "modals";
 @import "tooltip";
 @import "popovers";
-@import "carousel";
+@import "carousel";*/
 
 // Utility classes
 @import "utilities";
