Added about page and updated fields

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -89,3 +89,14 @@ Home Page
 		margin-bottom: -160px;
 	}
 }
+
+/*--------------------------------------------------------------
+About Page
+--------------------------------------------------------------*/
+/* Slider */
+.slider__arrows {
+	display: block;
+}
+.slider__nav {
+	display: none;
+}
