Added services to about page

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -100,3 +100,10 @@ About Page
 .slider__nav {
 	display: none;
 }
+
+/* Services */
+.about-services {
+	.service {
+		margin-bottom: 1.75em;
+	}
+}
