--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -13,8 +13,9 @@ Global
 }
 .accent-bar:before {
 	display: block;
-	content: '\2605\2605\2605';
 	margin: 0.875em 0 1.0em;
+	content: '\2605\2605\2605';
+	text-align: center;
 	font-size: 1.125em;
 	@include antialiased;
 }
@@ -328,6 +329,9 @@ Home Page
 About Page
 --------------------------------------------------------------*/
 .about-page {
+	.site-content {
+		padding-bottom: 0;
+	}
 	h1 {
 		margin: 0 0 0.5em;
 		font-size: 4.0em;
@@ -343,6 +347,7 @@ About Page
 /* Slider */
 .about-slider {
 	padding-top: 20px;
+	margin-bottom: 3.25em;
 	ul {
 		padding: 0;
 		list-style-type: none;
@@ -388,6 +393,18 @@ About Page
 			background-color: white;
 			transform-origin: center;
 		}
+	}
+}
+
+/* Services */
+.about-services {
+	h4 {
+		margin-bottom: 1.0em;
+		font-weight: bold;
+		@include antialiased;
+	}
+	.service {
+		margin-bottom: 2.0em;
 	}
 }
 
