--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -14,7 +14,11 @@ textarea {
 	font-family: $sans-serif;
 	font-size: 16px;
 	font-size: 1.6rem;
-	line-height: 1.5;
+	line-height: 1.75;
+}
+
+h1, h2, h3, h4 {
+	@include antialiased;
 }
 
 p {
