Finished about and contact page templates

--- a/assets/sass/_fonts.scss
+++ b/assets/sass/_fonts.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 /* Fontello */
-$version: "53575280";
+$version: "10264405";
 @font-face {
 	font-family: 'fontello';
 	src: url('../fonts/fontello.eot?@{version}');
@@ -62,3 +62,4 @@ $version: "53575280";
 .icon-facebook:before { content: '\e805'; } /* '' */
 .icon-left-open-big:before { content: '\e806'; } /* '' */
 .icon-right-open-big:before { content: '\e807'; } /* '' */
+.icon-search-1:before { content: '\e809'; } /* '' */
