--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -49,7 +49,7 @@ Effects
 }
 
 /* Shadows */
-@mixin drop-shadow($color) {
+@mixin drop_shadow($color) {
 	-webkit-box-shadow: 0 8px 10px -6px $color;
 	box-shadow: 0 8px 10px -6px $color;
 }
@@ -58,4 +58,20 @@ Effects
 @mixin antialiased {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+@mixin text_small {
+	font-size: 87.5%;
+}
+@mixin text_smaller {
+	font-size: 75%;
+}
+
+/* Positioning */
+@mixin flip-horiz {
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
 }
