Added work sections to home page template

--- a/assets/sass/_768up.scss
+++ b/assets/sass/_768up.scss
@@ -90,6 +90,11 @@ Home Page
 	}
 }
 
+/* Work */
+.work-image {
+	margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 About Page
 --------------------------------------------------------------*/
