--- a/assets/sass/_mobile.scss
+++ b/assets/sass/_mobile.scss
@@ -100,17 +100,31 @@ Global
 Header
 --------------------------------------------------------------*/
 .site-header {
-	text-align: center;
-	background-color: $link-color;
-	padding: 1.5em 0 1.25em;
 	position: relative;
 	z-index: 999;
-	a {
-		color: white;
-		&:hover,
-		&:focus {
-			color: #E3E3E3;
-			@include animate;
+	text-align: center;
+	padding: 1.5em 0 1.25em;
+	border-bottom: 1px solid lighten($border-light, 5%);
+	.logo {
+		display: block;
+		width: 131px;
+		height: 43px;
+		background: url('../img/logo.svg') left top no-repeat;
+		background-size: contain;
+	}
+	&.accent {
+		background-color: $link-color;
+		border-bottom: none;
+		a {
+			color: white;
+			&:hover,
+			&:focus {
+				color: #E3E3E3;
+				@include animate;
+			}
+		}
+		.logo {
+			background-image: url('../img/logo-white.svg');
 		}
 	}
 }
@@ -302,14 +316,29 @@ Home Page
 	vertical-align: middle;
 }
 .cat-list {
-	color: darken($border-color, 15%);
+	color: darken($border-light, 15%);
 	font-weight: 300;
 	a {
-		color: darken($border-color, 15%);
+		color: darken($border-light, 15%);
 		border-bottom: 1px dotted transparent;
 		&:hover {
-			border-color: darken($border-color, 15%);
+			border-color: darken($border-light, 15%);
 			@include animate;
+		}
+	}
+}
+
+/* More Work */
+.m-work-section {
+}
+.m-work-image {
+	img {
+		display: block;
+		margin: 0 auto 1.5em;
+	}
+	&:last-of-type {
+		img {
+			margin-bottom: 0;
 		}
 	}
 }
@@ -489,7 +518,7 @@ Contact Page
 	input[type="text"],
 	input[type="email"],
 	textarea {
-		border: 1px solid darken($border-color, 5%);
+		border: 1px solid $border-dark;
 		padding: 0.25em 0.5em;
 		width: 100%;
 	}
@@ -499,7 +528,7 @@ Contact Page
 	input[type="submit"] {
 		@extend %color-button;
 		@include text_small;
-		padding: 0.75em 1.0em;
+		padding: 0.5em 1.0em;
 	}
 }
 
@@ -527,19 +556,19 @@ Contact Page
 .map-search {
 	position: relative;
 	::-webkit-input-placeholder {
-	    color: darken($border-color, 5%);
+	    color: $border-dark;
 	}
 	:-moz-placeholder {
-	   color: darken($border-color, 5%);
+	   color: $border-dark;
 	}
 	::-moz-placeholder {
-	   color: darken($border-color, 5%);
+	   color: $border-dark;
 	}
 	:-ms-input-placeholder {
-	   color: darken($border-color, 5%);
+	   color: $border-dark;
 	}
 	input[type="text"] {
-		border: 1px solid darken($border-color, 5%);
+		border: 1px solid $border-dark;
 		padding: 0.25em 80px 0.25em 0.5em;
 		width: 100%;
 	}
